# hashElijah

./: README.md
src/: .gitignore  CMakeLists.txt  HashStats.py  Hashes.cpp  Hashes.h  MakeCsv.sh  MakeHashes.sh  Makefile  StudentHash.cpp  StudentHash.h  StudentHashRunner.c  bitflip.py  hash_analysis.xlsx  hashes.csv  main.cpp  modchecker.sh  runner  screenlog.0  screenlog.1  screenlog.2  smhasher
src/a/mod/: 10  100  1000  10000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  1033  (+9956 more)
src/a/orig/: 4318  4319  4321  4322  4323  4324  4326  4327  4328  4329  4331  4332  4333  4334  4336  4337  4338  4339  4341  4342  4343  4344  4346  4347  4348  4349  4351  4352  4353  4354  4356  4357  4358  4359  4361  4362  4363  4364  4366  4367  (+4473 more)
src/ones/mod/: 100  1000  10000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  1033  1034  (+9949 more)
src/ones/orig/: 1001  1006  1010  1012  1014  1015  1017  1021  1029  1032  1035  1036  1038  1039  1044  1045  1046  1047  1049  1051  1052  1055  1058  1065  1066  1067  1068  1074  1075  1079  1081  1082  1084  1085  1086  1088  1095  1099  1101  1102  (+7691 more)
src/random/mod/: 1  10  100  1000  10000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  (+9978 more)
src/samples/: 0-prime  01  1  random
(+40758 files in other folders)
